# client

./: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  nginx.conf
.github/workflows/: ci-cd.yml
assets/: main.css  reset.css
src/: api_client.rs  component.rs  main.rs  route.rs
src/component/: input.rs  modal.rs  modal.scss
src/component/input/: button.rs  button.scss  password.rs  password.scss  text.rs
src/route/: authenticated_app.rs  authenticated_app.scss  index.rs  login.rs  login_register.scss  register.rs
src/route/authenticated_app/: browse.rs  dashboard.rs  header.rs  header.scss
src/route/authenticated_app/browse/: browse_actions.rs  view.rs
src/route/authenticated_app/browse/browse_actions/: browse_state.rs  create_folder.rs  create_folder.scss  upload.rs
