[package]
name = "my-file-cloud-client"
version = "0.1.0"
edition = "2021"

[dependencies]
my-file-cloud-api = { git = "https://github.com/my-file-cloud/api.git", tag = "v0.1.0" }
dioxus = { version = "0.7.1", features = [] }
reqwest = { version = "0.13", features = ["json", "cookies", "multipart"] }
serde_json = "1"
jsonwebtoken = { version = "10", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
http = "1.4.0"
dioxus-router = "0.7"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
web-sys = "0.3.85"
uuid = "1.23"
gloo = "0.11.0"
gloo-file = "0.3.0"
dioxus-material-icons = "4.0.1"
futures = "0.3.32"
serde = "1"
async-trait = "0.1"
dioxus_style = "0.5"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
